crates/toml/tests/snapshots/invalid/array/text-after-array-entries.stderr
TOML parse error at line 3, column 3
  |
3 |   "Entry"
  |   ^
missing comma between array elements, expected `,`
